--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ After each round, the sequence becomes progressively longer and more complex, ma
         <img class="project-image" src="images/simon-game.png" alt="simon-game">
   <em>Simon game</em>
       </div>
-      <div class="carousel-item active container-fluid">
+      <div class="carousel-item container-fluid">
         <a href="https://priyatamkumar.github.io/drum/" target="_blank"><h1>Drum</h1></a>
         <h2 class="project-text">I have create a drum website which can be play using mouse and keybord by typing the letter specified on button </h2>
         <img class="project-image" src="images/drum.png" alt="drum-site">
@@ -132,6 +132,10 @@ After each round, the sequence becomes progressively longer and more complex, ma
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
