--- a/index.html
+++ b/index.html
@@ -109,13 +109,18 @@
 
 <section id="project">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-intervel="3000">
+    <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
     <div class="carousel-inner">
       <h1 class="big-heading">Project</h1>
       <div class="carousel-item active container-fluid">
         <a href="https://priyatamkumar.github.io/Simon-Game/" target="_blank"><h1>Simon game</h1></a>
         <h4 class="project-text">I developed the classic Simon Game with JavaScript. The object of the game is to repeat a series of random tile clicks created by the game.
 After each round, the sequence becomes progressively longer and more complex, makings it harder to remember.</h4>
-        <img class="project-image" src="images/simon-game.png" alt="simon-game">
+        <img class="image" src="images/simon-game.png" alt="simon-game">
   <em>Simon game</em>
       </div>
       <div class="carousel-item container-fluid">
@@ -123,6 +128,12 @@ After each round, the sequence becomes progressively longer and more complex, ma
         <h2 class="project-text">I have create a drum website which can be play using mouse and keybord by typing the letter specified on button </h2>
         <img class="project-image" src="images/drum.png" alt="drum-site">
   <em>Drum website</em>
+      </div>
+      <div class="carousel-item container-fluid">
+        <a href="https://priyatamkumar.github.io/tindog/" target="_blank" ><h1>Tindog</h1></a>
+        <h2 class="project-text">i have made a site which is dating app for dog . it is now only layout but later it is completed</h2>
+        <img class="project-image" src="images/tindog.png" alt="dice-profile">
+        <em>dice website</em>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
