--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
       <h1 class="big-heading">Project</h1>
       <div class="carousel-item active container-fluid">
         <a href="https://priyatamkumar.github.io/Simon-Game/" target="_blank"><h1>Simon game</h1></a>
-        <h4 class="project-text">I developed the classic Simon Game with JavaScript. The object of the game is to repeat a series of random tile clicks created by the game.
+        <h4>I developed the classic Simon Game with JavaScript. The object of the game is to repeat a series of random tile clicks created by the game.
 After each round, the sequence becomes progressively longer and more complex, makings it harder to remember.</h4>
-        <img class="image" src="images/simon-game.png" alt="simon-game">
+        <img class="project-image" src="images/simon-game.png" alt="simon-game">
   <em>Simon game</em>
       </div>
       <div class="carousel-item container-fluid">
